src/ui/features/plan_review/snapshots/terracotta__ui__features__plan_review__render__tests__preview_40x24_help.snap
---
source: src/ui/features/plan_review/render.rs
expression: buffer_text(buffer)
---
Target: main [PROD] Workspace: default
U┌Help────────────────────────────────┐~
─│ Navigation                       ▲ │─
 │ ↑ / ↓ / j / k                    ┃ │▲
 │   scroll vertically              ┃ │┃
 │ ← / → / h / l                    ┃ │┃
 │   scroll horizontally            ┃ │┃
 │ PgUp / PgDn                      ┃ │┃
 │   scroll one page                ┃ │┃
 │ Home / End                       ┃ │┃
 │   go to the top or bottom        ┃ │┃
-│ s                                ┃ ││
 │   overview                       ┃ ││
 │                                  ┃ ││
 │ Review                           │ ││
 │ /                                │ ││
 │   filter the full plan           │ ││
 │                                  │ ││
 │ Actions                          │ ││
 │ c                                ▼ ││
◀︎│ ↑/↓/k/j/PgUp/PgDn scroll           │▶︎
─│ ?/Esc close                        │─
s└────────────────────────────────────┘
? help | q quit                    L3/43
