src/ui/features/plan_review/snapshots/terracotta__ui__features__plan_review__render__tests__preview_80x24_apply-confirmation.snap
---
source: src/ui/features/plan_review/render.rs
expression: buffer_text(buffer)
---
main [PROD]  ws:default  terraform loading...  /repo/environme...production/main
Umain [PROD]  ws:default  terraform loading...  /repo/environm...roduction/main
────────────────────────────────────────────────────────────────────────────────
  # terraform_data.api will be updated in-place                                ▲
  ~ resource "terraform_data" "api" {                                          ┃
 ┌────────────────────────────────────────────────────────────────────────────┐┃
 │                                                                            │┃
 │ Apply this reviewed plan?                                                  │┃
 │                                                                            │┃
 │ Target: main [PROD]                                                        │┃
 │ Workspace: default                                                         │┃
-│ Directory: /repo/environments/production/main                              │┃
 │ Tool: terraform loading...                                                 ││
 │ Plan: +2 add  ~2 update  0 replace  -1 destroy                             ││
 │                                                                            ││
 │ Type main to apply (exact match).                                          ││
 │ > |                                                                        ││
 │                                                                            ││
 └────────────────────────────────────────────────────────────────────────────┘│
 Enter confirm | Esc back | ? help                                             │
    }                                                                          │
                                                                               │
◀︎═══════════════════════════════════════════════════════════════════───────────▶︎
/ filter | ? help | q quit | s overview                                Line 3/43
