src/ui/features/plan_review/snapshots/terracotta__ui__features__plan_review__render__tests__preview_80x24_help.snap
---
source: src/ui/features/plan_review/render.rs
expression: buffer_text(buffer)
---
Target: main [PROD] Workspace: default Tool: terraform loading... Dir: /re...ain
Unique targets (replace once): +2 add  ~2 update  0 replace  -1 destroy
──────────────────┌Help─────────────────────────────────────┐───────────────────
  # terraform_data│ Navigation                              │                  ▲
  ~ resource "terr│ ↑ / ↓ / j / k scroll vertically         │                  ┃
      id       = "│ ← / → / h / l scroll horizontally       │                  ┃
      ~ input  = "│ PgUp / PgDn   scroll one page           │                  ┃
      # (4 unchang│ Home / End    go to the top or bottom   │                  ┃
    }             │ s             overview                  │                  ┃
                  │                                         │                  ┃
  # terraform_data│ Review                                  │                  ┃
-/+ resource "terr│ /             filter the full plan      │                  │
      ~ input = "w│                                         │placement         │
      - old_checks│ Actions                                 │ef0123456789abcdef│
      + new_checks│ c             show execution context    │                  │
    }             │ y             copy the full plan        │                  │
                  │ a             apply the full plan       │                  │
  # terraform_data│                                         │                  │
  - resource "terr│ Exit                                    │                  │
      id = "old-20│ q             quit                      │                  │
    }             │ ?/Esc close                             │                  │
◀︎═════════════════└─────────────────────────────────────────┘═══════───────────▶︎
────────────────────────────────────────────────────────────────────────────────
s overview | / filter | a apply | ? help | q quit                      Line 3/43
