src/ui/features/plan_review/snapshots/terracotta__ui__features__plan_review__render__tests__preview_80x24_help_bottom.snap
---
source: src/ui/features/plan_review/render.rs
expression: buffer_text(buffer)
---
Target: main [PROD] Workspace: default Tool: terraform loading... Dir: /re...ain
Unique targets (re┌Help─────────────────────────────────────┐-1 destroy
──────────────────│                                         │───────────────────
  # terraform_data│PgUp / PgDn   scroll one page            │                  ▲
  ~ resource "terr│                                         │                  ┃
      id       = "│Home / End    go to the top or bottom    │                  ┃
      ~ input  = "│                                         │                  ┃
      # (4 unchang│s             overview                   │                  ┃
    }             │                                         │                  ┃
                  │Review                                   │                  ┃
  # terraform_data│/             filter the full plan       │                  ┃
-/+ resource "terr│                                         │                  │
      ~ input = "w│Actions                                  │placement         │
      - old_checks│c             show execution context     │ef0123456789abcdef│
      + new_checks│                                         │                  │
    }             │y             copy the full plan         │                  │
                  │                                         │                  │
  # terraform_data│a             apply the full plan        │                  │
  - resource "terr│                                         │                  │
      id = "old-20│Exit                                     │                  │
    }             │q             quit                       │                  │
◀︎═════════════════│?/Esc close                              │═══════───────────▶︎
──────────────────└─────────────────────────────────────────┘───────────────────
s overview | / filter | a apply | ? help | q quit                      Line 3/43
